# ClassesLab

./: README.md  pyproject.toml
NeuralNetworks/: README.md
NeuralNetworks/ClassicalNN/: McCulloch_Pitt.ipynb
src/NNproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
