[project]
name = "NNproject"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jhonatan Felix", email = "jhonyrf@gmail.com"},
]
dependencies = ["numpy>=2.4.2", "matplotlib>=3.10.8"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
]
